frontend/assets/stylesheets/pages/_events.scss
/* ... */
/* ==========================================================================
   An Event List item
   ========================================================================== */

.event-item {
    position: relative;
    width: 100%;
    background-color: $c-neutral7;

    .event-item__media {
        a, img {
            vertical-align: text-bottom; // remove descenders
            display: block;
        }
    }

    .event-item__meta {
        padding: rem($gs-gutter / 2);

        .event-item__title {
            @include fs-headline(2);
            color: $black;
            margin-bottom: rem($gs-baseline);
            position: relative;
        }
        .event-status--sold-out {
            display: inline-block;
            color: $white;
            background-color: $mem-live-accent;
            @include fs-data(2);
            position: relative;
            top: rem(-3px);
            padding: rem(1px) rem(3px);
            margin-right: rem(4px);
        }
        .event-item__time {
            @include fs-data(4);
            color: $black;
        }

        .event-item__location {
            font-size: 0; /** space between inline block elements **/
            color: $c-neutral2;
        }

        .event-item__location-name,
        .event-item__location-address {
            @include fs-data(3);
        }

        .event-item__description {
            @include fs-bodyCopy(1);
            padding: rem($gs-baseline) 0 0;
            color: $black;
        }

        .event-item__cta {
            width: 100%;
            padding: $gs-baseline 0 0;
            .event-item__price-amount {
                display: block;
                @include fs-header(4);
                color: $black;
            }

            .event-item__price-amout-discount {
                display: block;
                @include fs-data(3);
                color: $c-neutral2;
            }

            .event-item__action {
                position: absolute;
                bottom: rem($gs-gutter / 2);
                right: rem($gs-gutter / 2);
                width: rem(36px);
                height: rem(36px);
                padding: 0 rem(8px) 0 0;

                @include mq(desktop) {
                    bottom: rem($gs-gutter);
                    right: rem($gs-gutter);
                }
                background-color: $mem-live-accent;
                @include border-radius(50px);
                border: 0;
                &:focus {
                    outline: 0;
                }

                &:after {
                    @extend .icon-sprite-arrow-right-white;
                    content: '';
                    fill: $black;
                    float: right;
                }
            }
        }

        @include mq(tablet) {
            padding: rem($gs-baseline) rem($gs-gutter / 2);
            height: auto;

            .event-item__title {
                @include fs-headline(3);
            }

            .event-item__cta {
                position: absolute;
                bottom: 0;
                left: 0;
                right: 0;
                padding: 0 rem($gs-gutter / 2) rem($gs-gutter / 2);
            }
        }

        @include mq(desktop) {
            padding: rem($gs-gutter);
            .event-item__description {
                @include fs-headline(2);
                padding: rem($gs-baseline * 2) 0 0;
            }

            .event-item__cta {
                padding: 0 rem($gs-gutter) rem($gs-gutter);
            }
        }
    }

    @include guss-row('&.event-item--hero');

    &.event-item--hero {
        margin-bottom: rem($gs-gutter / 2);
        width: 100%;

        @include mq(tablet) {
            margin-bottom: rem($gs-gutter / 2);
            height: auto;
            overflow: hidden;

            .event-item__media {
                display: inline-block;
                vertical-align: top;
                @include flex(1, 0, percentage(gs-span(8)/gs-span(12)));
                .no-flexbox & {
                    width: 60%;
                    display: inline-block;
                }
            }

            .event-item__meta {
                display: inline-block;
                vertical-align: top;
                position: relative;
                @include flex();
                .no-flexbox & {
                    width: 40%;
                    .event-item__cta {
                        position: static;
                    }
                }
            }

            .event-item__description {
                display: none;
            }
        }

        @include mq(desktop) {
            .event-item__title {
                @include fs-headline(5);
            }

            .event-item__time {
                @include fs-headline(2);
            }

            .event-item__description {
                display: block;
            }
        }

    }

    &:hover {
        text-decoration: none;
        background-color: $c-neutral5;
        .event-item__title {
            text-decoration: underline;
        }
    }

    *:hover {
        text-decoration: none;
    }

    &.event-item--standalone {
        .event-item__cta {
            position: static;
            padding: rem($gs-baseline * 2) 0 0;
        }

        .event-item__location-name,
        .event-item__location-detail {
            @include fs-data(3);
        }

        *:hover, &:hover {
            background-color: $c-neutral7;
            .event-item__title {
                text-decoration: none;
            }
        }
    }

    &.event-item--blank {
        display: none;
        @include mq(tablet) {
            display: block;
        }
        *:hover, &:hover {
            background-color: $c-neutral7;
        }
    }
}
/* ... */

